# edge-mining-framework

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  pypi-publish.yml
examples/: backtest_adapter.py  gate_kalshi.py  rules.yaml  run_evaluator.py
src/edge_mining_framework/: __init__.py  ev_gate.py  evaluator.py  evaluators.py  gate.py
tests/: test_anti_lookahead.py  test_ev_gate.py  test_features.py
tests/integration/: test_backtest_adapter.py  test_live_pipeline.py
