[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edge-mining-framework"
version = "0.1.0"
description = "Prediction Market Alpha Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/edge_mining_framework"]
