[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edge-mining-framework"
version = "0.1.0"
description = "Prediction Market Alpha Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/edge_mining_framework"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]
per-file-ignores = ["tests/*": "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
indent-width = 4
line-ending = "lf"

[tool.ruff.lint.pydocstyle]
convention = "google"
